--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
             <td class="control_buttons">
                     <button id="start" onclick="handlePlay();" type="button" class="button green" style="float:left;font-size: 13px;padding-left:30px;padding-right:30px;">Start</button>
                     <button id="stop" type="button" class="button rosy" style="float:left; margin-left:20px;font-size: 13px;">Stopp</button>
-                    <!--
-                    <button id="downloadHex" onclick="hexFileUploadTipp();" type="button" class="download">Micro:bit Firmware Download</button>
-                    -->
             </td>
         </tr>
         <tr>
@@ -107,22 +104,22 @@
         -->
         <category name="Bewegungen" colour="#5b5ba5">
             <block type="forward">
-                <field name="forward_duration">0.1</field>
+                <field name="forward_duration">1</field>
             </block>
             <block type="back">
-                <field name="back_duration">0.1</field>
+                <field name="back_duration">1</field>
             </block>
             <block type="left">
-                <field name="left_duration">0.1</field>
+                <field name="left_duration">1</field>
             </block>
             <block type="right">
-                <field name="right_duration">0.1</field>
+                <field name="right_duration">1</field>
             </block>
             <block type="turn_left">
-                <field name="turn_left_duration">0.1</field>
+                <field name="turn_left_duration">1</field>
             </block>
             <block type="turn_right">
-                <field name="turn_right_duration">0.1</field>
+                <field name="turn_right_duration">1</field>
             </block>
         </category>
 
@@ -157,7 +154,7 @@
         <category name="Einstellungen" colour="65">
             </block>
             <block type="motor">
-                <field name="motor">1</field>
+                <field name="motor">b</field>
                 <field name="velocity">15</field>
             </block>
             <!--turn display
@@ -172,7 +169,7 @@
                 <field name="repetition">1</field>
             </block>
 			<block type="wait_seconds">
-				<field name="seconds">0.1</field>
+				<field name="seconds">1</field>
 			</block>
 			<block type="start_block"></block>
         </category>
