updated logo and added correct favicon

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <table>
         <tr>
             <!-- Title, Logo and Program commands -->
-            <img src="media/logo/ecology.png" class="logo" style="float:left; height:10%;padding-top:0.5% ;">
+            <img src="media/logo/icon-4earth-erde-4.png" class="logo" style="float:left; height:10%;padding-top:0.5% ;">
         </tr>
         <tr>
             <td class="control_buttons">
